--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "version": "0.0.1",
+  "name": "mongo-seeding",
   "author": {
     "name": "Paweł Kosiec",
     "email": "pawel@kosiec.net",
